--- a/index.html
+++ b/index.html
@@ -771,59 +771,45 @@
                     </div>
                     <ul class="edition-card__list">
                         <li class="edition-card__item artOfColor">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Искусство цвета</h3>
-                                <p class="section-text">620 руб</p>
-                            </div>
+                            <h3 class="filter-menu__heading">Искусство цвета</h3>
                             <h3 class="filter-menu__subtitle">Иттен, Йоханес</h3>
+                            <p class="section-text">620 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                         <li class="edition-card__item typographie">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Типографика</h3>
-                                <p class="section-text">2450 руб</p>
-                            </div>
+                            <h3 class="filter-menu__heading">Типографика</h3>
                             <h3 class="filter-menu__subtitle">Рудер, Эмиль</h3>
+                            <p class="section-text">2450 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                         <li class="edition-card__item bookaboutLetters">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Книга про буквы</h3>
-                                <p class="section-text">2200 руб</p>
-                            </div>
+                            <h3 class="filter-menu__heading">Книга про буквы</h3>
                             <h3 class="filter-menu__subtitle">Гордон, Юрий</h3>
+                            <p class="section-text">2200 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                         <li class="edition-card__item nikolayIlyin">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Николай Ильин</h3>
-                                <p class="section-text">1100 руб</p>
-                            </div>
-                            <h3 class="filter-menu__subtitle">Кричевский, Владимир</h3>
+                            <h3 class="filter-menu__heading">Николай Ильин</h3>
+                            <h3 class="filter-menu__subtitle">Кричевский, Влади...</h3>
+                            <p class="section-text">1100 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                         <li class="edition-card__item modyleSystem">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Модульные сетки в граф...</h3>
-                                <p class="section-text">1450 руб</p>
-                            </div>
-                            <h3 class="filter-menu__subtitle">Мюллер-Брокман, Йозеф</h3>
+                            <h3 class="filter-menu__heading">Модульные сетки...</h3>
+                            <h3 class="filter-menu__subtitle">Мюллер-Брокман...</h3>
+                            <p class="section-text">1450 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                         <li class="edition-card__item graphicEvolution">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Эволюция графических стилей</h3>
-                                <p class="section-text">2450 руб</p>
-                            </div>
+                            <h3 class="filter-menu__heading">Эволюция графич...</h3>
                             <h3 class="filter-menu__subtitle">Хеллер, Чваст</h3>
+                            <p class="section-text">2450 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                         <li class="edition-card__item artAndVisual">
-                            <div class="edition__slide-header">
-                                <h3 class="filter-menu__heading">Искусство и визуальное в...</h3>
-                                <p class="section-text">2200 руб</p>
-                            </div>
+                            <h3 class="filter-menu__heading">Искусство и визуа...</h3>
                             <h3 class="filter-menu__subtitle">Арнхейм, Рудольф</h3>
+                            <p class="section-text">2200 руб</p>
                             <button class="button edition__button">Заказать</button>
                         </li>
                     </ul>
